--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 	            <div class="service-content">
 	            	<h3 class="h05">Photography</h3>
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>I shoot both digital and analog, small, medium and large format (4x5). I have a lot of photo retouching as well as some studio and lighting setup experience.
 	         		</p>	         		
 	         	</div> 	         	 
 
@@ -222,7 +222,7 @@
 	            <div class="service-content">	
 	            	<h3 class="h05">UI/UX Design</h3>  
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>I work with top companies mostly in the automotive and medicine industries to develop high quality screen interfaces with strict safety standards.
 	         		</p>	         		
 	            </div>	                          
 
@@ -235,7 +235,7 @@
 	            <div class="service-content">
 	            	<h3 class="h05">Editorial Design</h3>
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>From playful small publications that play with typography and photography around a particular concept to bigger projects with strict grids and styles.
 	        			</p>
 	            </div> 	            	               
 
@@ -248,7 +248,7 @@
 	            <div class="service-content">
 	            	<h3 class="h05">Art Direction</h3>
 
-		            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p>From event management to curation of art spaces, development of visual identitites and concepts.
 	         		</p>	         		
 	            </div>                
 
@@ -272,7 +272,7 @@
 	   			<h3>Showcase</h3>
 		   		<h1>Selected Projects</h1>  			
 		   		
-		   		<p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>	   			
+		   		<p class="lead">Here you can find a small sample of the projects I've been in charge. From student organized projects, to medium size companies, to industry giants.</p>	   			
 	   		</div>   		
 	   	</div> <!-- end row section-intro -->   		
 
