--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ I was involved in the development of the remote unit interface design.
    			<h3>Contact</h3>
    			<h1>Get In Touch.</h1>
 
-            <p class="lead">If you like what you've seen so far and you're interested in getting an extended pdf version of my <a href="mailto:santosivosantos@me.com?subject=CV/Portfolio request">cv and portfolio</a>, or just in <a href="mailto:santosivosantos@me.com?subject=Let's grab a coffee sometime!">meeting for a coffee</a> and getting to know me don't exitate to contact me.</p>
+            <p class="lead">If you like what you've seen so far and you're interested in getting an extended pdf version of my <a href="mailto:santosivosantos@me.com?subject=CV/Portfolio request">cv and portfolio</a>, or just in <a href="mailto:santosivosantos@me.com?subject=Let's grab a coffee sometime!">meeting for a coffee</a> and getting to know me don't hesitate to contact me.</p>
             
    		</div> 
             <div class="more animate-intro">
