--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 	            <div class="service-content">
 	            	<h3 class="h05">Editorial Design</h3>
 
-		            <p>From playful small publications that play with typography and photography around a particular concept to bigger projects with strict grids and styles.
+		            <p>From small publications that play with typography and photography around a particular concept to bigger projects with strict grids and styles.
 	        			</p>
 	            </div> 	            	               
 
