--- a/index.html
+++ b/index.html
@@ -76,23 +76,7 @@
 
 			
 
-			<ul class="header-social-list">
-	         <li>
-	         	<a href="https://www.facebook.com/santosivosantos"><i class="fa fa-facebook-square"></i></a>
-	         </li>
-	         <li>
-	         	<a href="https://twitter.com/santosivosantos"><i class="fa fa-twitter"></i></a>
-	         </li>
-	         <li>
-	         	<a href="https://www.instagram.com/santosivosantos/"><i class="fa fa-instagram"></i></a>
-	         </li>
-            <li>
-            	<a href="https://www.behance.net/ivosantos"><i class="fa fa-behance"></i></a>
-            </li>
-	         <li>
-	         	<a href="https://dribbble.com/santosivosantos"><i class="fa fa-dribbble"></i></a>
-	         </li>	         
-	      </ul>		
+	
 
 		</nav>  <!-- end #menu-nav-wrap -->
 
@@ -127,24 +111,7 @@
 		   </div> <!-- end home-content-tablecell --> 		   
 		</div> <!-- end home-content-table -->
 
-		<ul class="home-social-list">
-	      <li class="animate-intro">
-	        	<a href="https://www.facebook.com/santosivosantos"><i class="fa fa-facebook-square"></i></a>
-	      </li>
-	      <li class="animate-intro">
-	        	<a href="https://twitter.com/santosivosantos"><i class="fa fa-twitter"></i></a>
-	      </li>
-	      <li class="animate-intro">
-	        	<a href="https://www.instagram.com/santosivosantos/"><i class="fa fa-instagram"></i></a>
-	      </li>
-         <li class="animate-intro">
-           	<a href="https://www.behance.net/ivosantos"><i class="fa fa-behance"></i></a>
-         </li>
-	      <li class="animate-intro">
-	        	<a href="https://dribbble.com/santosivosantos"><i class="fa fa-dribbble"></i></a>
-	      </li>	      
-	   </ul> <!-- end home-social-list -->	
-
+		
 		<div class="scrolldown">
 			<a href="#about" class="scroll-icon smoothscroll">		
 		   	Scroll Down		   	
@@ -434,7 +401,7 @@ I was involved in the development of the remote unit interface design.
    			<h3>Contact</h3>
    			<h1>Get In Touch.</h1>
 
-            <p class="lead">If you like what you've seen so far and you're interested in getting an extended pdf version of my <a href="mailto:santosivosantos@me.com?subject=CV/Portfolio request">cv and portfolio</a>, or just in <a href="mailto:santosivosantos@me.com?subject=Let's grab a coffee sometime!">meeting for a coffee</a> and getting to know me don't hesitate to contact me.</p>
+            <p class="lead">If you like what you've seen so far and you're interested in getting an extended pdf version of my <a href="mailto:santosivosantos@me.com?subject=CV/Portfolio request">cv and portfolio</a>, or just in <a href="mailto:santosivosantos@me.com?subject=Let's grab a coffee sometime!">meeting up for a coffee</a> don't hesitate to contact me.</p>
             
    		</div> 
             <div class="more animate-intro">
