--- a/index.html
+++ b/index.html
@@ -76,7 +76,23 @@
 
 			
 
-	
+			<ul class="header-social-list">
+	         <li>
+	         	<a href="https://www.facebook.com/santosivosantos"><i class="fa fa-facebook-square"></i></a>
+	         </li>
+	         <li>
+	         	<a href="https://twitter.com/santosivosantos"><i class="fa fa-twitter"></i></a>
+	         </li>
+	         <li>
+	         	<a href="https://www.instagram.com/santosivosantos/"><i class="fa fa-instagram"></i></a>
+	         </li>
+            <li>
+            	<a href="https://www.behance.net/ivosantos"><i class="fa fa-behance"></i></a>
+            </li>
+	         <li>
+	         	<a href="https://dribbble.com/santosivosantos"><i class="fa fa-dribbble"></i></a>
+	         </li>	         
+	      </ul>		
 
 		</nav>  <!-- end #menu-nav-wrap -->
 
@@ -111,7 +127,24 @@
 		   </div> <!-- end home-content-tablecell --> 		   
 		</div> <!-- end home-content-table -->
 
-		
+		<ul class="home-social-list">
+	      <li class="animate-intro">
+	        	<a href="https://www.facebook.com/santosivosantos"><i class="fa fa-facebook-square"></i></a>
+	      </li>
+	      <li class="animate-intro">
+	        	<a href="https://twitter.com/santosivosantos"><i class="fa fa-twitter"></i></a>
+	      </li>
+	      <li class="animate-intro">
+	        	<a href="https://www.instagram.com/santosivosantos/"><i class="fa fa-instagram"></i></a>
+	      </li>
+         <li class="animate-intro">
+           	<a href="https://www.behance.net/ivosantos"><i class="fa fa-behance"></i></a>
+         </li>
+	      <li class="animate-intro">
+	        	<a href="https://dribbble.com/santosivosantos"><i class="fa fa-dribbble"></i></a>
+	      </li>	      
+	   </ul> <!-- end home-social-list -->	
+
 		<div class="scrolldown">
 			<a href="#about" class="scroll-icon smoothscroll">		
 		   	Scroll Down		   	
