--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 	            <div class="service-content">	
 	            	<h3 class="h05">UI/UX Design</h3>  
 
-		            <p>I work with top companies mostly in the automotive and medicine industries to develop high quality screen interfaces with strict safety standards.
+		            <p>I colaborate with top companies mostly in the automotive and medicine industries to develop high quality screen interfaces with strict safety standards.
 	         		</p>	         		
 	            </div>	                          
 
@@ -248,7 +248,7 @@
 	            <div class="service-content">
 	            	<h3 class="h05">Art Direction</h3>
 
-		            <p>From event management to curation of art spaces, development of visual identitites and concepts.
+		            <p>I'm involved in the curation and the development of visual identitites and concepts for art spaces and brands.
 	         		</p>	         		
 	            </div>                
 
